# Baja-2025

./: .editorconfig  .gitignore  .gitmodules  ApplicationDiagram.drawio  CMakeLists.txt  LICENSE  README.md  SETUP.md  Vertical Dashboard.drawio
app/: CMakeLists.txt
app/libs/epoxy/: CMakeLists.txt
app/libs/glad/include/glad/: gl.h  glad.h
app/libs/glad/src/: gl.c  glad.c
app/src/: main.cpp
app/src/Core/: Application.cpp  Application.hpp  EventHandler.cpp  EventHandler.hpp  SharedData.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadRunner.hpp  Time.cpp  Time.hpp
app/src/Core/Events_all/: Event.cpp  Event.hpp  EventHandler.cpp  EventHandler.hpp
app/src/Core/Pins/: CMakeLists.txt  pins.cpp  pins.hpp
app/src/Modules/: Module.hpp  moduletemplate.cpp  moduletemplate.hpp
app/src/Modules/GPIO/: Adafruit_MAX31865.c  Adafruit_MAX31865.h  EngineRPM.cpp  EngineRPM.hpp  FanControl.cpp  FanControl.hpp  FuelFlow.cpp  FuelFlow.hpp  GearPosition.cpp  GearShifter.cpp  GearShifter.hpp  Max31865.cpp  Max31865.hpp  Pins.hpp  Please.py  TempProbe.cpp  TempProbe.hpp  piggpio.cpp
app/src/Modules/GUI/: GUIModule.cpp  GUIModule.hpp
app/src/Modules/GUI/Renderer/: Camera.cpp  Camera.hpp  CameraUtils.hpp  Font.cpp  Font.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
app/src/Modules/GUI/Renderer/Shaders/: Shader.glsl
app/src/Modules/Sensor/: SensorModule.cpp  SensorModule.hpp
app/src/Modules/Sensors/: FuelFlow.cpp  FuelFlow.hpp  Pins.hpp  TempProbe.cpp  TempProbe.hpp
assets/Shaders/: Camera.glsl  Sprite.glsl  Text.glsl
